--- a/tracker/src/App.css
+++ b/tracker/src/App.css
@@ -8,8 +8,34 @@ h1{
   margin-bottom: 15px;
 }
 
+.header-container{position: -webkit-sticky;
+position: sticky;
+top: 0;
+align-items: center;
+z-index: 100;
+}
 
+.card-right-container{
+  height: 40%;
+  width: 100%;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-around;
+  margin: "10%";
+ 
+}
 
+.card-left-container{ 
+  flex-direction: column;
+  display: flex  ;
+ border-bottom: 2px solid  rgb(158, 216, 228);
+ 
+}
+
+.text-style{
+  color: rgb(158, 216, 228);
+  text-align: "center";
+}
 /* demo styles */
 
 @import url(https://fonts.googleapis.com/css?family=Roboto:400,500,300,700);
