--- a/tracker/src/App.css
+++ b/tracker/src/App.css
@@ -36,6 +36,7 @@ z-index: 100;
 .text-style{
   color: rgb(183, 183, 184,0.2);
   text-align: "center";
+  font-weight: 600;
 }
 /* demo styles */
 
@@ -57,8 +58,8 @@ section{
     width: 6px;
 } 
 ::-webkit-scrollbar-track {
-    -webkit-box-shadow: inset 0 0 6px rgba(0,0,0,0.3); 
+    -webkit-box-shadow: inset 0 0 6px rgba(0,0,0,0.2); 
 } 
 ::-webkit-scrollbar-thumb {
-    -webkit-box-shadow: inset 0 0 6px rgba(0,0,0,0.3); 
+    -webkit-box-shadow: inset 0 0 6px rgba(0,0,0,0.1); 
 }
