--- a/tracker/src/App.css
+++ b/tracker/src/App.css
@@ -1,5 +1,4 @@
-
-h1{
+h1 {
   color: #fff;
   font-size: 30px;
   font-weight: 300;
@@ -8,14 +7,15 @@ h1{
   text-transform: uppercase;
 }
 
-.header-container{position: -webkit-sticky;
-align-items: center;
-position: sticky;
-top: 0;
-z-index: 100;
+.header-container {
+  position: -webkit-sticky;
+  align-items: center;
+  position: sticky;
+  top: 0;
+  z-index: 100;
 }
 
-.card-right-container{
+.card-right-container {
   display: flex;
   flex-direction: row;
   height: 40%;
@@ -24,55 +24,51 @@ z-index: 100;
   width: 100%;
 }
 
-.card-left-container{ 
-  flex-direction: column;
-  display: flex  ;
-  justify-content: first baseline;
+.card-left-container {
   align-items: center;
-
+  display: flex;
+  flex-direction: column;
+  justify-content: first baseline;
 }
 
-.text-style{
-  color: rgb(183, 183, 184,0.2);
-  text-align: "center";
+.text-style {
+  color: rgb(183, 183, 184, 0.2);
   font-weight: 600;
+  text-align: "center";
 }
 
-.middle-component-container{
-    align-items: flex-start;
-    display: flex;
-    flex-direction: row;
-    justify-content: space-around;
-    margin-top: -8%;
-}
-
-.pie-char-container{ 
+.middle-component-container {
+  align-items: flex-start;
   display: flex;
   flex-direction: row;
-  padding-top: 10% ;
+  justify-content: space-around;
+  margin-top: -8%;
 }
 
+.pie-char-container {
+  display: flex;
+  flex-direction: row;
+  padding-top: 10%;
+}
 
-@import url(https://fonts.googleapis.com/css?family=Roboto:400,500,300,700);
-body{
+@import url(https://fonts.googleapis.com/css?family=Roboto:400, 500, 300, 700);
+body {
   /* background: -webkit-linear-gradient(left,rgba(22,22,36),rgba(22,22,36)); */
-  background:rgba(22,22,36,0.96);
-  font-family: 'Roboto', sans-serif;
+  background: rgba(22, 22, 36, 0.96);
+  font-family: "Roboto", sans-serif;
 }
-section{
+section {
   margin: 50px;
 }
-
-
 
 /* for custom scrollbar for webkit browser*/
 
 ::-webkit-scrollbar {
-    width: 6px;
-} 
+  width: 6px;
+}
 ::-webkit-scrollbar-track {
-    -webkit-box-shadow: inset 0 0 6px rgba(0,0,0,0.2); 
-} 
+  -webkit-box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.2);
+}
 ::-webkit-scrollbar-thumb {
-    -webkit-box-shadow: inset 0 0 6px rgba(0,0,0,0.1); 
+  -webkit-box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.1);
 }
