--- a/tracker/src/Components/TableComponent/TableComponent.css
+++ b/tracker/src/Components/TableComponent/TableComponent.css
@@ -1,35 +1,34 @@
-table{
-    width:100%;
-    table-layout: fixed;
-  }
-  
-  .table-heading-container{
-      border:solid 1px rgba(255,255,255,0.1);
-  }
+table {
+  table-layout: fixed;
+  width: 100%;
+}
 
- .table-heading
-  {
-    padding: 20px 15px;
-    text-align: left;
-    font-weight: 600;
-    font-size: 12px;
-    color: rgb(108, 117, 124);
-    text-transform: uppercase;
-     }
+.table-heading-container {
+  border: solid 1px rgba(255, 255, 255, 0.1);
+}
 
-  .table-data{
-    padding: 15px;
-    text-align: left;
-    vertical-align:middle;
-    font-weight: 300;
-    font-size: 12px;
-    color: #fff;
-    border-bottom: solid 1px rgba(255,255,255,0.1);
-  }
-  
-.tbl-content{
-    height:300px;
-    overflow-x:auto;
-    margin-top: 0px;
-    border: 1px solid rgba(255,255,255,0.3);
-  }
+.table-heading {
+  color: rgb(108, 117, 124);
+  font-size: 12px;
+  font-weight: 600;
+  padding: 20px 15px;
+  text-align: left;
+  text-transform: uppercase;
+}
+
+.table-data {
+  border-bottom: solid 1px rgba(255, 255, 255, 0.1);
+  color: #fff;
+  font-size: 12px;
+  font-weight: 300;
+  padding: 15px;
+  text-align: left;
+  vertical-align: middle;
+}
+
+.tbl-content {
+  border: 1px solid rgba(255, 255, 255, 0.3);
+  height: 300px;
+  margin-top: 0px;
+  overflow-x: auto;
+}
